Contrato/contracts/error.log
error: unsupported type
   --> src/lib.rs:148:41
    |
148 |     pub fn balance_of(env: &Env, owner: &Address) -> u32 {
    |                                         ^

warning: unused import: `Map`
 --> src/lib.rs:4:19
  |
4 |     Address, Env, Map, String, Vec
  |                   ^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0308]: mismatched types
   --> src/lib.rs:123:32
    |
123 |             from_tokens.remove(pos);
    |                         ------ ^^^ expected `u32`, found `usize`
    |                         |
    |                         arguments to this method are incorrect
    |
note: method defined here
   --> /home/allanrpereira/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-21.7.7/src/vec.rs:448:12
    |
448 |     pub fn remove(&mut self, i: u32) -> Option<()> {
    |            ^^^^^^
help: you can convert a `usize` to a `u32` and panic if the converted value doesn't fit
    |
123 |             from_tokens.remove(pos.try_into().unwrap());
    |                                   ++++++++++++++++++++

For more information about this error, try `rustc --explain E0308`.
warning: `ntf` (lib) generated 1 warning
error: could not compile `ntf` (lib) due to 2 previous errors; 1 warning emitted